[package]
name = "walrus-orchestrator"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = { version = "1.5.18", default-features = false }
aws-runtime = { version = "1.5.10", default-features = false }
aws-sdk-ec2 = { version = "1.116.0", default-features = false }
clap.workspace = true
color-eyre = "0.6.5"
crossterm = "0.29.0"
eyre = "0.6.12"
futures.workspace = true
prettytable.workspace = true
# TODO(alberto): Remove this dependency again (#284).
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser", rev = "75334db" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
ssh2 = "0.9.5"
sui-sdk.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
walrus-core.workspace = true
walrus-service = { workspace = true, features = ["deploy", "node"] }
walrus-sui.workspace = true
walrus-utils = { workspace = true, features = ["config"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[[bin]]
name = "walrus-orchestrator"
path = "src/main.rs"
